chore: Update .gitignore with additional exclusions
Add ignores for:
- .rustc_info.json (compiler artifact)
- test_file.txt (temporary test files)
- test_results/ (test output directory)

--- a/.gitignore
+++ b/.gitignore
@@ -240,6 +240,13 @@ yarn.lock
 # Generated files
 generated/
 *.generated.*
+.rustc_info.json
+*/.rustc_info.json
+
+# Test artifacts
+test_file.txt
+test_results/
+**/test_results/
 
 # Local configuration
 .local/
