--- a/Cargo.toml
+++ b/Cargo.toml
@@ -88,8 +88,9 @@ hyper = { version = "1.0", features = ["full"] }
 # Additional utilities
 uuid = { version = "1.8", features = ["v4"] }
  rand = "0.8"
- thiserror = "1.0"
- anyhow = "1.0"
+  thiserror = "1.0"
+  toml = "0.9.4"
+  anyhow = "1.0"
 base64 = "0.21"
 strsim = "0.11.1"
 num_cpus = "1.16"
