--- a/src/domain/Cargo.toml
+++ b/src/domain/Cargo.toml
@@ -12,4 +12,7 @@ serde_json.workspace = true
 anyhow.workspace = true
 uuid.workspace = true
 chrono.workspace = true
-async-trait = "0.1"
+async-trait.workspace = true
+tokio.workspace = true
+tracing.workspace = true
+libloading.workspace = true
