--- a/src/presentation/Cargo.toml
+++ b/src/presentation/Cargo.toml
@@ -33,3 +33,6 @@ crossterm.workspace = true
 axum.workspace = true
 strsim = "0.11"
 tracing.workspace = true
+tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
+uuid = { version = "1.0", features = ["v4"] }
+base64 = "0.22"
