--- a/src/shared/Cargo.toml
+++ b/src/shared/Cargo.toml
@@ -21,3 +21,5 @@ lazy_static.workspace = true
 tokio.workspace = true
 lz4 = "1.24"
 bincode.workspace = true
+thiserror.workspace = true
+toml.workspace = true
