--- a/src/cli/Cargo.toml
+++ b/src/cli/Cargo.toml
@@ -15,7 +15,7 @@ name = "bro"
 path = "src/main.rs"
 
 [dependencies]
-presentation = { path = "../presentation" }
+presentation = { path = "../presentation", features = ["tui"] }
 application = { path = "../application" }
 infrastructure = { path = "../infrastructure" }
 clap = { version = "4.5", features = ["derive"] }
