--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 # IDE & Editors
 # =============================================================================
 
+*piper/
 # VS Code
 .vscode/
 !.vscode/settings.json
